# obs-soundboard-censor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build.yml
cmake/: FindLibAv.cmake
data/locale/: en-US.ini
installer/: installer-Windows.iss.in
release/: checksums.txt
src/: audio-decoder.cpp  audio-decoder.h  censor-filter.cpp  censor-filter.h  plugin-main.cpp  soundboard-dock.cpp  soundboard-dock.h
